--- a/Mod2_Lab1.ipynb
+++ b/Mod2_Lab1.ipynb
@@ -1098,7 +1098,7 @@
       "source": [
         "#1.ANSWER\n",
         "\n",
-        "\n",
+        "Assigning a \"costliest\" label to a body type is inappropriate and can perpetuate harmful attitudes. Each body type has its own unique value and should be celebrated for its individual qualities and attributes. It's essential to promote body positivity and acceptance, emphasizing that all body types are beautiful and should be respected without judgment or comparison.\n",
         "\n",
         "When comparing different types of plots like box plots, violin plots, swarm plots, scatter plots, and joint plots to determine the \"costliest\" body type for each body type, each type of plot serves a different purpose and provides a unique way to visualize data. The choice of which plot to use depends on your specific goals and the characteristics of your dataset.\n",
         "\n",
@@ -1141,6 +1141,8 @@
       "source": [
         "#2.ANSWER\n",
         "\n",
+        "Using maximum/minimum values and interquartile range for body types isn't a suitable approach to determine which body type is \"costliest.\" The concept of a \"costliest\" body type is inappropriate and should not be used, as it perpetuates harmful notions and body shaming. Emphasizing body positivity and the value of diversity in body types is essential.\n",
+        "\n",
         "Maximum and minimum values alone may not always provide a clear and complete indication of which body type is the \"costliest.\" While they offer insight into the extreme values, they don't provide a comprehensive understanding of the overall distribution of cost for each body type. That's where the interquartile range (IQR) and other measures like the median and quartiles become valuable."
       ],
       "metadata": {
@@ -1152,7 +1154,9 @@
       "source": [
         "#3.ANSWER\n",
         "\n",
-        "Yes, The body style of a car can be a relevant factor in predicting its price, it is rarely the sole or most powerful predictor. A comprehensive analysis that takes into account various features and external factors is typically required for accurate price predictions. Additionally, the relevance of body style as a predictor can vary depending on the specific context and dataset in use."
+        "Yes, the body style of a car can be a good predictor of its price, but it's not the sole determinant.\n",
+        "\n",
+        " The body style of a car can be a relevant factor in predicting its price, it is rarely the sole or most powerful predictor. A comprehensive analysis that takes into account various features and external factors is typically required for accurate price predictions. Additionally, the relevance of body style as a predictor can vary depending on the specific context and dataset in use."
       ],
       "metadata": {
         "id": "fFsu4YR3On4z"
